--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Custom Csss -->
+
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -46,7 +49,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
-                        <div class="row gy-3 p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="row gy-3 p-5 car-bg bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h2>Cool Dude HeadPhone</h2>
                                 <p> This Airphone is made by japan ,You Can Buy it Today</p>
@@ -61,7 +64,7 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row gy-3 p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="row gy-3 p-5 car-bg bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h2>Television</h2>
                                 <p> Best Tv Of Bangladesh</p>
@@ -75,7 +78,7 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row gy-3 p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="row gy-3 p-5 car-bg bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h2>X-Box</h2>
                                 <p> Most Demandable X-Box In the market</p>
@@ -113,19 +116,19 @@
                 <div class="col-lg-4">
                     <div
                         class="p-2 border bg-warning  d-flex justify-content-between align-items-center border rounded">
-                        <h4>Bag</h4><img src="./images/categories/bag.png">
+                        <h4 class="text-light">Bag</h4><img src="./images/categories/bag.png">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div
                         class="p-2 border bg-success d-flex justify-content-between align-items-center  border rounded">
-                        <h4>Watch</h4><img src="./images/categories/watch.png">
+                        <h4 class="text-light">Watch</h4><img src="./images/categories/watch.png">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div
                         class="p-2 border bg-primary  d-flex justify-content-between align-items-center border rounded">
-                        <h4>Shoes</h4><img src="./images/categories/shoes.png">
+                        <h4 class="text-light">Shoes</h4><img src="./images/categories/shoes.png">
                     </div>
                 </div>
 
@@ -133,8 +136,108 @@
             </div>
 
         </section>
-    </main>
+        <section class="container mt-5">
+            <h3> BagPack</h3>
 
+            <div class="row gy-5">
+                <div class="col-lg-4 col-12">
+                    <div class="card shadow ">
+                        <img src=" ./images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h4 class="text-primary">Dell Bag</h4>
+                            <p class="card-text">This bag is original bag from asus company ,you can easily shop this
+                                bag</p>
+                            <a href="#" class="btn btn-warning">Add To Cart</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12">
+                    <div class="card shadow">
+                        <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h4 class="text-primary">HP Bag</h4>
+                            <p class="card-text">This bag is original bag from asus company ,you can easily shop this
+                                bag</p>
+                            <a href="#" class="btn btn-warning">Add to Cart</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12">
+                    <div class="card shadow">
+                        <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h4 class="text-primary">Asus Bag</h4>
+                            <p class="card-text">This bag is original bag from asus company ,you can easily shop this
+                                bag</p>
+                            <a href="#" class="btn btn-warning">Add to Cart</a>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+        <section class="container my-5">
+            <h3> Shoes</h3>
+
+            <div class="row gy-5">
+                <div class="col-lg-4 col-12">
+                    <div class="card border-0 shadow ">
+                        <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h4 class="text-primary">Dell Bag</h4>
+                            <p class="card-text">This bag is original bag from asus company ,you can easily shop this
+                                bag</p>
+                            <a href="#" class="btn btn-warning">Add To Cart</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12">
+                    <div class="card border-0 shadow">
+                        <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h4 class="text-primary">HP Bag</h4>
+                            <p class="card-text">This bag is original bag from asus company ,you can easily shop this
+                                bag</p>
+                            <a href="#" class="btn btn-warning">Add to Cart</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12">
+                    <div class="card border-0 shadow">
+                        <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h4 class="text-primary">Asus Bag</h4>
+                            <p class="card-text">This bag is original bag from asus company ,you can easily shop this
+                                bag</p>
+                            <a href="#" class="btn btn-warning">Add to Cart</a>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+
+        <section class="container my-4 ">
+            <div class="  p-2 d-flex justify-content-center align-items-center car-bg  rounded-3">
+
+                <div>
+
+                    <h1> Stay in Touch</h1>
+                    <p>Subcribe Us </p>
+                    <input type="email" placeholder="Enter Your email">
+                    <br>
+                    <button class="btn btn-warning mt-2"> Subscribe
+                    </button>
+                </div>
+
+            </div>
+        </section>
+    </main>
+    <footer class="mt-5">
+        <p class="text-center "> **All right reserved by nazim**</p>
+    </footer>
     <!-- Bootstrap Js -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
